--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <navbar id="navbar">
       <ul id="navbar-list">
         <li><a href="#welcome-section" id="navbar-link">About</a></li>
-        <li><a href="#welcome-section" id="navbar-link">Work</a></li>
-        <li><a href="#welcome-section" id="navbar-link">Contact</a></li>
+        <li><a href="#project-header" id="navbar-link">Work</a></li>
+        <li><a href="#contacts-header" id="navbar-link">Contact</a></li>
       </ul>
     </navbar>
     <section id="welcome-section">
